crates/vvv/tests/corpus/snapshots/rust-local-imports__external__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
--- stderr ---
Source is outside this workspace
